# ATRI-LK

./: .env.prod  .gitignore  README.md  changelog.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug报告.md  改进建议.md  问题咨询.md
ATRI/: __init__.py  exceptions.py  log.py  message.py  patch.py  permission.py  service.py
ATRI/configs/: __init__.py  config.py  create.py  data_source.py  default_config.yml  models.py  plugin_config.py
ATRI/database/: __init__.py  db.py  models.py  sqlite.py
ATRI/plugins/: coser.py  dailynews.py  dinggong.py  essential.py  fadian.py  mcserver.py  repo.py  status.py
ATRI/plugins/anti_effort/: data_source.py
ATRI/plugins/bilibili_dynamic/: api.py  data_source.py
ATRI/plugins/boardgame/: game.py  go.py  othello.py  svg.py
ATRI/plugins/essential/: __init__.py
ATRI/plugins/funny/: __init__.py  data_source.py
ATRI/plugins/help/: __init__.py  data_source.py
ATRI/plugins/kimo/: data_source.py
ATRI/plugins/lkbot/: __init__.py  checker.py  config.py  data_source.py  util.py
ATRI/plugins/lkchat/: __init__.py  img_chat.py
ATRI/plugins/lkfarm/: __init__.py  data_source.py
ATRI/plugins/lkfunc/: __init__.py  ai_chat.py  tiangou.py
ATRI/plugins/lkpet/: __init__.py  pet_chat.py  pet_data.py
ATRI/plugins/manage/: __init__.py  data_source.py  listener.py  plugin.py
ATRI/plugins/polaroid/: __init__.py  image_dealer.py
ATRI/plugins/saucenao/: __init__.py
ATRI/system/: __init__.py  broadcast.py  essential.py  repo.py  restart.py  status.py
ATRI/utils/: apscheduler.py  check_update.py  curve.py  event.py  img_editor.py  limiter.py  lock.py  machine.py  model.py  request.py  sqlite.py
plugins/: anime_search.py  coser.py  dailynews.py  dinggong.py  fadian.py  tiangou.py
plugins/anti_effort/: __init__.py  image_dealer.py
plugins/bilibili_dynamic/: __init__.py  api.py
plugins/boardgame/: __init__.py  game.py
plugins/kimo/: __init__.py
plugins/lkchat/: __init__.py  ai_chat.py  img_chat.py
plugins/lkfarm/: __init__.py  data_source.py
plugins/lkpet/: __init__.py  pet_chat.py  pet_data.py
plugins/polaroid/: data_source.py
plugins/rss/: __init__.py
plugins/saucenao/: data_source.py
plugins/setu/: __init__.py
plugins/team/: __init__.py
res/: default_config.yml
res/text/: tiangou.txt
(+95 files in other folders)
