[tool.poetry]
name = "ATRI-LK"
version = "1.0.0"
description = "An another project for ATRI, Usage Nonebot2."
authors = ["lokyoh <2366360924@qq.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://lokyoh.github.io/ATRI-LK-docs/"
repository = "https://github.com/lokyoh/ATRI-LK"
documentation = "https://lokyoh.github.io/ATRI-LK-docs/"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.3.2"}
nonebot-adapter-onebot = "^2.4.4"
nonebot-plugin-htmlrender = "^0.3.3"
mcstatus = "^11.1.1"
edge-tts = "^6.1.12"
google-generativeai = "^0.7.2"
tortoise-orm = "^0.21.5"
httpx = "^0.27.0"
scikit-image = "^0.24.0"
apscheduler = "^3.10.4"
rich = "^13.7.1"
tabulate = "^0.9.0"
xmltodict = "^0.13.0"
jieba = "^0.42.1"
psutil = "^6.0.0"
onnxruntime = "^1.18.1"
imageio = "^2.35.0"

[[tool.poetry.source]]
name = "tsinghua-mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
