[tool.poetry]
name = "ATRI-LK"
version = "1.0.0"
description = "An another project for ATRI, Usage Nonebot2."
authors = ["lokyoh <2366360924@qq.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://lokyoh.github.io/ATRI-LK-docs/"
repository = "https://github.com/lokyoh/ATRI-LK"
documentation = "https://lokyoh.github.io/ATRI-LK-docs/"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
nonebot-adapter-onebot = "^2.4.4"
mcstatus = "^11.1.1"
edge-tts = "^6.1.12"
google-generativeai = "^0.7.2"
tortoise-orm = "^0.21.6"
httpx = "^0.27.0"
scikit-image = "^0.24.0"
apscheduler = "^3.10.4"
rich = "^13.7.1"
tabulate = "^0.9.0"
xmltodict = "^0.13.0"
jieba = "^0.42.1"
psutil = "^6.0.0"
onnxruntime = "^1.19.0"
imageio = "^2.35.1"
annotated-types = "^0.7.0"
pydantic-core = "2.20.1"
pyyaml = "^6.0.2"
click = "^8.1.7"
jinja2 = "^3.1.4"
playwright = "^1.46.0"
aiofiles = "^24.1.0"
markdown = "^3.7"

[[tool.poetry.source]]
name = "tsinghua-mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
